library/pod-security-policy/host-filesystem/samples/psp-host-filesystem/example_exception_allowed.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-host-filesystem-exclude
  labels:
    app: nginx-host-filesystem-exclude
spec:
  nodeSelector:
    kubernetes.io/os: linux
  containers:
  - name: image-exemption
    image: exception.azurecr.io/exception:v1.0
    volumeMounts:
    - mountPath: /cache
      name: cache-volume
      readOnly: true
  volumes:
  - name: cache-volume
    hostPath:
      path: /tmp # directory location on host
